export interface RoomType {
    code : string;
    designation : string;
    description? : string;
}

